--- a/packApp/src/sample/packapp/depot/depot.fxml
+++ b/packApp/src/sample/packapp/depot/depot.fxml
@@ -1,10 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.packapp.depot.DepotController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.packapp.depot.DepotController">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#mainPage" text="&lt; Retour" />
+      <HBox layoutX="14.0" layoutY="80.0" prefHeight="169.0" prefWidth="222.0">
+         <children>
+            <VBox prefHeight="227.0" prefWidth="98.0" spacing="20.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="30.0" text="ID">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font></Label>
+                  <Label prefHeight="17.0" prefWidth="88.0" text="Nom Produit">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font></Label>
+                  <Label text="Quantité">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+                  <Label text="Prix Unit">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="226.0" prefWidth="160.0" spacing="12.0">
+               <children>
+                  <TextField fx:id="IDTextField" />
+                  <TextField fx:id="TitleTextField" />
+                  <TextField fx:id="AuthorTextField" layoutX="10.0" layoutY="35.0" />
+                  <TextField fx:id="YearTextField" layoutX="10.0" layoutY="60.0" />
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </VBox>
+         </children>
+      </HBox>
+      <TableView fx:id="ProductTableView" layoutX="240.0" layoutY="1.0" prefHeight="394.0" prefWidth="360.0">
+         <columns>
+            <TableColumn fx:id="IDCol" prefWidth="50.0" text="ID" />
+            <TableColumn fx:id="TitleCol" prefWidth="129.0" text="Nom Produit" />
+            <TableColumn fx:id="AuthorCol" prefWidth="74.0" text="Quantité" />
+            <TableColumn fx:id="YearCol" prefWidth="104.0" text="Prix Unit(Dhs)" />
+         </columns>
+      </TableView>
+      <Button fx:id="InsertBtn" layoutX="14.0" layoutY="330.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="62.0" text="Insert" AnchorPane.rightAnchor="524.0">
+         <font>
+
+            <Font size="13.0" />
+         </font>
+      </Button>
+      <Button fx:id="UpdateBtn" layoutX="86.0" layoutY="330.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="69.0" text="Update">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
+      <Button fx:id="DeleteBtn" layoutX="164.0" layoutY="330.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="69.0" text="Delete">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
+      <Button fx:id="RetournBtn" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" text="&lt; Retour" />
    </children>
 </AnchorPane>
